<resources>
    <string name="app_name">Inventory_app_2_final</string>
    <string name="action_settings">Settings</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="product">Product Name </string>
    <string name="price">Price </string>
    <string name="quantity">Quantity </string>
    <string name="supplier_name">Supplier Name </string>
    <string name="Save">Save Data</string>
    <string name="retrieve">Retrieve</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="sale">Sale</string>
    <string name="dummy_data">Insert Dummy Data</string>
    <string name="update">Update Data</string>
    <string name="call">Call</string>
    <string name="unknown">Unknown</string>
    <string name="failed">"Failed to Add Record"</string>
    <string name="decrease">Decrease Quantity</string>
    <string name="increase">Increase Quantity</string>

</resources>
