<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/ProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/quan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Supplier"
        android:layout_marginLeft="1dp"
        android:textColor="#000000"
        android:hint="@string/quantity"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/supp_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Supplier"
        android:layout_marginLeft="18dp"
        android:hint="@string/supplier_phone"
        android:layout_toRightOf="@id/quan"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ProductName"
        android:hint="@string/supplier_name"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/price"
        android:textColor="#000000" />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/sale_quan"
        android:onClick="getquantity"
        android:text="@string/sale" />
</RelativeLayout>